# rag-block

./: .env_example  Dockerfile  README.md  app.py  pyproject.toml
src/: agent.py  emb_service.py  index.py  prompt.py  tools.py
